daemon-set.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: daemonset01
spec:
  selector:
    matchLabels:
      name: daemon-set-1
  template:
    metadata:
      labels:
        name: daemon-set-1
    spec:
      containers:
      - name: nginx01
        image: nginx
