liveness-probe.yaml
apiVersion: v1
kind: Pod
metadata:
  name: liveness01
spec:
  containers:
  - name: liveness-probe-check
    image: ubuntu
    tty: true
    livenessProbe:
      exec:
        command:
        - service
        - nginx
        - status
      initialDelaySeconds: 20
      periodSeconds: 5
