pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx01-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      tier: frontend
  template:
    metadata:
      labels:
        tier: frontend
    spec:
      containers:
      - name: nginx-container
        image: nginx:1.27.0-perl
