pv-pvc-pods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod01
spec:
  volumes:
    - name: volume01
      persistentVolumeClaim:
        claimName: pvc01
  containers:
    - name: ubunut01
      image: ubuntu
      tty: true
      volumeMounts:
        - mountPath: /etc
          name: volume01
