readiness-probe.yaml
apiVersion: v1
kind: Pod
metadata:
  name: readiness01
spec:
  containers:
  - name: readiness-probe-check
    image: ubuntu
    tty: true
    readinessProbe:
     exec:
       command:
       - cat
       - /tmp/healthy
     initialDelaySeconds: 5
     periodSeconds: 5
