request-and-limits.yaml
apiVersion: v1
kind: Pod
metadata:
  name: request-limit01
spec:
  containers:
  - name: nginx01
    image: nginx
    resources:
      requests:
        memory: "6400Mi"
        cpu: "5"
      limits:
        memory: "12800Mi"
        cpu: "10"
