secrets.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secret05
spec:
  volumes:
    - name: secret-volume
      secret:
        secretName: algonox_123456789
  containers:
    - name: nginx-container
      image: nginx
      volumeMounts:
        - name: secret-volume
          readOnly: true
          mountPath: "/etc/secret-volume"
