tolerations.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx01
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
      tolerations:
      - key: "key"
        operator: "Exists"
        effect: "NoSchedule"
