volumes.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod01
spec:
  containers:
    - name: ubuntu01
      image: ubuntu
      tty: true
      volumeMounts:
        - name: volume01
          mountPath: /etc
  volumes:
    - name: volume01
      hostPath:
        path: /k8s-example
        type: Directory
