service.yaml
apiVersion: v1
kind: Service
metadata:
   name: service01
spec:
   ports:
   - port: 8080
     targetPort: 80
