network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: incoming-traffic-block
  namespace: default
spec:
  podSelector:
    matchLabels:
      run: nginx02
  policyTypes:
  - Ingress
